# ai

./: .copier-answers.yml  .eslintignore  .gitignore  .prettierignore  .readthedocs.yaml  .stylelintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  install.json  jest.config.js  myst.yml  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml  deploy.yml  test-bump-version.yml  tests.yml
.yarn/patches/: @langchain-community-npm-0.3.31-e7e6211c56.patch
demo/: README.md  overrides.json  pyproject.toml
demo/contents/: components_demo.ipynb
docs/: any-llm-gateway.md  api-keys.md  changelog.md  contributing.md  custom-providers.md  custom.css  index.md  install.md  litellm.md  mcp-servers.md  ollama.md  release.md  skills.md  usage.md  web-retrieval.md
jovia/: __init__.py
locale/: fr.json
patches/: @langchain+community+0.3.30.patch
python/jupyterlite-ai/: README.md  pyproject.toml
python/jupyternaut-persona/: README.md  install.json  pyproject.toml
python/jupyternaut-persona/jupyternaut_persona/: __init__.py
schema/: ai-provider.json  chat.json  plugin.json  provider-registry.json  settings-model.json  system-prompts.json
scripts/: bump_version.py  copy-locale.js  dev_install.py  settings-checker.js  settings-generator.js  sync-model-context-windows.mjs  sync-model-info.mjs  tsconfig-settings.json
src/: agent.ts  approval-buttons.ts  backup.ts  base-completer.ts  chat-handler.ts  chat-model-handler.ts  chat-model-registry.ts  chat-model.ts  completion-provider.ts  diff-manager.ts  global-api.ts  global.d.ts  icons.ts  index.ts  provider.ts  rendered-message-outputarea.ts  settings-panel.tsx  token.ts  tokens.ts  tool-registry.ts
src/__tests__/: provider-settings.spec.ts
src/chat-commands/: clear.ts  index.ts  registry.ts  skills.ts
src/completion/: completion-provider.ts
src/components/: chat-header.tsx  clear-button.tsx  completion-status.tsx  context-warning.ts  edit-message-button.tsx  index.ts  mic-button.tsx  model-select.tsx  new-chat-button.tsx  save-button.tsx  stop-button.tsx  token-usage-display.tsx  tool-select.tsx  usage-display.tsx
src/default-providers/: index.ts
src/default-providers/Anthropic/: settings-schema.json
src/default-providers/ChromeAI/: chat.ts  instructions.ts  settings-schema.json
src/default-providers/Gemini/: completer.ts  instructions.ts  settings-schema.json
src/default-providers/Grok/: completer.ts  instructions.ts  settings-schema.json
src/default-providers/MistralAI/: completer.ts  settings-schema.json
src/default-providers/Ollama/: completer.ts  instructions.ts  settings-schema.json
src/default-providers/OpenAI/: settings-schema.json
src/default-providers/WebLLM/: completer.ts  instructions.ts
src/default_providers/: index.ts
src/default_providers/Anthropic/: settings-schema.json
src/default_providers/ChromeAI/: instructions.md  settings-schema.json
src/default_providers/MistralAI/: instructions.md  settings-schema.json
src/default_providers/OpenAI/: settings-schema.json
src/llm-models/: anthropic-completer.ts  chrome-completer.ts  codestral-completer.ts  index.ts  openai-completer.ts  utils.ts  webllm-completer.ts
src/models/: settings-model.ts
src/notebook-actions/: cell-utils.ts  icons.ts  index.ts  plugin.ts  prompts.ts
src/provider-settings/: base.json
src/providers/: built-in-providers.ts  generated-context-windows.ts  generated-model-info.ts  model-info.ts  models.ts  provider-registry.ts  provider-tools.ts
src/settings/: instructions.ts  panel.tsx  settings-connector.ts
src/skills/: index.ts  parse-skill.ts  register-skills.ts  skill-loader.ts  skill-registry.ts
src/tools/: commands.ts  create-notebook.ts  file.ts  notebook.ts  skills.ts  test-tool.ts  test_tool.ts  web.ts
src/widgets/: ai-settings.tsx  chat-wrapper.tsx  main-area-chat.ts  mainAreaChat.ts  provider-config-dialog.tsx
style/: ai-settings.css  base.css  index.css
ui-tests/: jupyter_server_test_config.py  mcp-server.py  package.json  playwright.config.js
ui-tests/.agents/skills/agent-helper/: SKILL.md
ui-tests/playwright-report/: index.html
ui-tests/tests/: browser-fetch-tool.spec.ts  chat-panel.spec.ts  chat-save-restore.spec.ts  code-completion.spec.ts  commands-tool.spec.ts  mcp-integration.spec.ts  mime-bundles.spec.ts  skills.spec.ts  test-utils.ts
