[project]
name = "jupyterlite-ai-demo"
version = "0.1.0"
description = "JupyterLite AI Demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.5.0",
    "jupyterlab-day>=0.2.0",
    "jupyterlab-night>=0.5.2",
    "jupyterlite-ai",
    "jupyterlite-core>=0.7.0",
    "jupyterlite-pyodide-kernel>=0.7.0",
]

[tool.uv.sources]
jupyterlite-ai = { path = "../" }
