[build-system]
requires = ["hatchling>=1.5.0", "jupyter-builder>=1.0.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite_ai"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
description = "A serverless AI code completions and chat"
authors = [
    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
keywords = ["jupyter", "jupyterlab", "jupyterlite", "jupyterlab-extension"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "jupyter-chat-components >=0.6.0,<0.7",
    "jupyter-secrets-manager >=0.5,<0.6",
    "jupyterlab-ai-commands >=0.3.1,<0.4",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://jupyterlite-ai.readthedocs.io/en/latest/"
Repository = "https://github.com/jupyterlite/ai"
Changelog = "https://jupyterlite-ai.readthedocs.io/en/latest/changelog/"
Source = "https://github.com/jupyterlite/ai/tree/main"
Issues = "https://github.com/jupyterlite/ai/issues/new/choose"
"Try it" = "https://jupyterlite.github.io/ai/lab/index.html"

[project.optional-dependencies]
jupyter = [
    "jupyterlab>=4.5.0",
    "jupyterlite>=0.6.0",
    "notebook>=7.5.0"
]
test = [
    "fastmcp>=3.2.3,<4",
    "starlette>=0.48.0,<0.49",
]
docs = [
    "jupyter-book",
]

[tool.hatch.version]
path = "jupyterlite_ai/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlite_ai/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_ai/labextension" = "share/jupyter/labextensions/@jupyterlite/ai"
"install.json" = "share/jupyter/labextensions/@jupyterlite/ai/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlite_ai/labextension/static/style.js",
    "jupyterlite_ai/labextension/package.json",
]
skip-if-exists = ["jupyterlite_ai/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]
path = "../.."

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
npm = ["jlpm"]
build_cmd = "build:prod"
editable_build_cmd = "build"
build_dir = "jupyterlite_ai/labextension"
path = "../.."

[tool.check-wheel-contents]
ignore = ["W002"]
